Stabilize merged PR test suite
Fix the test regressions that remained after merging the dependency update PRs into local main.

 - remove hard-coded broker ID assumptions from Kafka tests
 - make the ignore-window test deterministic
 - make KafkaSynthClient payload updates visible across threads
 - simplify payload reconfiguration tests to assert client state directly